--- a/assets/sass/_layout/_posts/_single-services.sass
+++ b/assets/sass/_layout/_posts/_single-services.sass
@@ -40,7 +40,7 @@
         line-height: 30px
         color: $dark-color
 
-.services-template-service-newsletter
+.services-template-service-newsletter, .services-template-service-websites
   .services
     &__overview
       &-title
@@ -64,8 +64,8 @@
         padding-bottom: 6px
         &:not(:first-child)
           padding-top: 6px
-  .section-projects
-    padding-top: 80px
+  .section-services
+    padding-bottom: 0px
 
 .section
   &-services
