--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -183,3 +183,12 @@
       color: $accent-color
       svg
         fill: $accent-color
+
+.card-related
+  &-post
+    margin-bottom: 30px
+    &__content
+      background-color: #fff
+      box-shadow: 0px 3px 20px rgb(0 0 0 / 5%)
+      img
+        width: 100%
