--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -192,3 +192,27 @@
       box-shadow: 0px 3px 20px rgb(0 0 0 / 5%)
       img
         width: 100%
+    &__title
+      font-family: $second-font
+      font-size: 19px
+      font-weight: 600
+      letter-spacing: 0.1px
+      margin-bottom: 10px
+      transition: all .3s ease-in
+      color: $text-color
+      &:hover
+        color: $main-color
+    &__categ
+      font-family: $main-font
+      font-size: 12px
+      font-weight: 400
+      letter-spacing: 0.3px
+      margin-bottom: 20px
+      color: $main-color
+    &__text
+      font-family: $main-font
+      font-size: 12px
+      font-weight: 400
+      letter-spacing: 0.3px
+      margin-bottom: 0px
+      color: $text-color
