--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -200,8 +200,6 @@
       margin-bottom: 10px
       transition: all .3s ease-in
       color: $text-color
-      &:hover
-        color: $main-color
     &__categ
       font-family: $main-font
       font-size: 12px
@@ -216,3 +214,8 @@
       letter-spacing: 0.3px
       margin-bottom: 0px
       color: $text-color
+    &__link
+      text-decoration: none
+      &:hover
+        .card-related-post__title
+          color: $main-color
