--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -42,6 +42,8 @@
   padding-bottom: 140px
   background-color: $main-color
   color: $text-color
+  .section__title
+    color: $dark-color
   .section__subtitle
     line-height: 44px
     margin-bottom: 60px
