--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -47,7 +47,7 @@
   .section__subtitle
     line-height: 44px
     margin-bottom: 60px
-    color: $text-color
+    color: $dark-color
   .bg-logo
     display: flex
     svg
