--- a/assets/sass/_components/_forms.sass
+++ b/assets/sass/_components/_forms.sass
@@ -8,9 +8,8 @@
         letter-spacing: 0.7998px
         line-height: 16px
         text-transform: uppercase
-
         margin-bottom: 10px
-        color: $text-color
+        color: $dark-color
       .wpcf7-form-control-wrap
         display: block
         margin-bottom: 20px
@@ -24,15 +23,13 @@
         font-size: 23px
         font-weight: 300
         letter-spacing: 0.46px
-
         border: none
         transition: all .3s ease-in
-
         background-color: transparent
-        color: $text-color
+        color: $dark-color
         svg
           transition: all .3s ease-in
-          fill: $text-color
+          fill: $dark-color
         &:hover
           color: $accent-color
           svg
