--- a/assets/sass/_components/_forms.sass
+++ b/assets/sass/_components/_forms.sass
@@ -42,3 +42,10 @@
         letter-spacing: 0.7998px
         line-height: 16px
         padding-top: 10px
+
+.page-template-page-home
+  .section-form
+    .wpcf7
+      .wpcf7-form
+        .wpcf7-submit
+          float: right !important
