--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -30,7 +30,7 @@
     font-size: 14px
     line-height: 25px
     margin-bottom: 40px
-    color: #496063
+    color: $dark-color
     // Addition lines for 4 line or multiline ellipsis
     text-overflow: ellipsis
     overflow: hidden
@@ -40,7 +40,7 @@
     white-space: normal
   hr
     border-top-width: 2px
-    border-top-color: #707070
+    border-top-color: $dark-color
     margin-bottom: 20px
   &__btn
     display: flex
@@ -52,7 +52,7 @@
     letter-spacing: 0.38px
     text-decoration: none
     transition: all .3s ease-in
-    color: $text-color
+    color: $dark-color
     svg
       margin-left: 5px
       transition: all .3s ease-in
