--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -82,6 +82,7 @@
       transition: all .3s ease-in
     &:hover::after
       background-image: linear-gradient(0,rgba(18,35,43,.85),rgba(18,35,43,.70))
+      filter: contrast(1.5)
       content: ""
       height: 100%
       left: 0
