--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -70,6 +70,19 @@
   margin-bottom: 40px
   > a
     position: relative
+  &:hover
+    figure
+      &::after
+        background-image: linear-gradient(0,rgba(18,35,43,.85),rgba(18,35,43,.70))
+        filter: contrast(1.5)
+        content: ""
+        height: 100%
+        left: 0
+        position: absolute
+        top: 0
+        width: 100%
+      img
+        transform: scale(1.1)
   figure
     margin-bottom: 20px
     overflow: hidden
@@ -80,26 +93,16 @@
       object-fit: cover
       transform: scale(1)
       transition: all .3s ease-in
-    &:hover::after
-      background-image: linear-gradient(0,rgba(18,35,43,.85),rgba(18,35,43,.70))
-      filter: contrast(1.5)
-      content: ""
-      height: 100%
-      left: 0
-      position: absolute
-      top: 0
-      width: 100%
-    &:hover
-      img
-        transform: scale(1.1)
   &__hover-title
     visibility: hidden
     opacity: 0
+    display: block
     transition: all .3s ease-in
-    position: absolute
+    position: absolute !important
     top: 45%
     left: 50%
     transform: translate(-50%, -50%)
+    text-decoration: none
     color: $main-color
   &__title
     text-decoration: none
@@ -129,9 +132,11 @@
         margin-right: 5px
         color: #496063
 
-.card-project a:hover + .card-project__hover-title
-  visibility: visible
-  opacity: 1
+.card-project:hover
+  .card-project__hover-title
+    visibility: visible
+    opacity: 1
+    color: $main-color
 
 .card-post
   margin-bottom: 40px
