--- a/assets/sass/_layout/_footer.sass
+++ b/assets/sass/_layout/_footer.sass
@@ -1,5 +1,7 @@
 .main-footer
   background: linear-gradient(to right, $dark-color 0%, $dark-color 50%, $main-color 50%, $main-color 100%)
+  position: relative
+  z-index: 9
   .footer-title
     font-size: 16px
     letter-spacing: 0.7998px
