--- a/assets/sass/_layout/_posts/_posts.sass
+++ b/assets/sass/_layout/_posts/_posts.sass
@@ -53,6 +53,17 @@
           &:hover
             color: $accent-color
     .post-sidebar
+      position: -webkit-sticky
+      position: -moz-sticky
+      position: -ms-sticky
+      position: -o-sticky
+      position: sticky
+      height: 300px
+      padding: 30px 0
+      background: transparent
+      top: 90px
+      bottom: auto
+      z-index: 8
       .menu,
       .related-services
         list-style-type: none
@@ -86,6 +97,8 @@
   padding-top: 60px
   padding-bottom: 60px
   background-color: #DEE3E4
+  position: relative
+  z-index: 9
   .previous-post,
   .next-post
     a
