--- a/assets/sass/_layout/_posts/_single-projects.sass
+++ b/assets/sass/_layout/_posts/_single-projects.sass
@@ -33,6 +33,17 @@
   .section-content
     padding-top: 60px
     padding-bottom: 100px
+    .sticky-content
+      position: -webkit-sticky
+      position: -moz-sticky
+      position: -ms-sticky
+      position: -o-sticky
+      position: sticky
+      height: 1000px
+      background: transparent
+      top: 100px
+      bottom: auto
+      z-index: 8
     .project-details
       h2
         font-family: $second-font
