--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -25,7 +25,8 @@
   align-items: center
   min-height: 100vh
   background: $main-color
-  background: linear-gradient(180deg, $main-color 1%, $bg-color 90%)
+  //background: linear-gradient(180deg, $main-color 1%, $bg-color 90%)
+  background: linear-gradient(0deg, #0cc 0%, #12232b 100%)
   &__title
     font-size: 72px
     font-weight: bold
