--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -40,6 +40,9 @@
         margin-left: 30%
   .section__title, .section__subtitle, .section__description, .section__description > p, .section__btn
     color: $dark-color
+  .section__btn
+    position: absolute
+    bottom: 40px
   
 
 
