--- a/assets/sass/_layout/_pages/_page-about.sass
+++ b/assets/sass/_layout/_pages/_page-about.sass
@@ -11,6 +11,22 @@
             background-color: $main-color
     .contact-icon__col
         width: 20px
+    a.section__description-contact
+        transition: all 0.1s ease-in
+        &:hover
+            color: $accent-color
+
+.section-about-team
+    .team
+        &__name
+            font-family: $second-font
+            font-size: 24px
+            font-weight: 100
+            margin-bottom: 10px
+        &_position
+            font-family: $main-font
+            font-size: 12px
+            font-weight: 400
 
 .about
     &__header
