--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -1,3 +1,13 @@
+.home
+  .navbar-nav
+    &__dark
+      .menu-item
+        .nav-link
+          color: $main-color
+          &:hover
+            color: #DEE3E4
+  
+  
 #main-header
   .navbar
     .site-branding
