--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -45,6 +45,16 @@
         color: #DEE3E4
         &:hover
           color: $main-color
+  .dropdown-menu
+    background-color: transparent
+    border: 0
+    padding: 0 10px
+    li
+      a
+        font-family: $main-font
+        font-size: 16px
+        font-weight: 400
+        color: $main-color
 
 @include media-breakpoint-up(lg)
   #main-header
