--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -49,6 +49,10 @@
     background-color: transparent
     border: 0
     padding: 0 10px
+    &:hover
+      background-color: transparent
+      li a
+        color: $bg-color
     li
       a
         font-family: $main-font
