--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -146,7 +146,7 @@
     transition: .5s ease-in-out
     cursor: pointer
     span
-      background: $dark-color
+      background: $main-color
       display: block
       position: absolute
       height: 3px
@@ -223,6 +223,9 @@
       .nav-link
         color: $main-color
         text-align: right
+        font-size: 28px
+        font-weight: 300
+        margin-bottom: 20px
     .navbar-actions
       display: flex
       align-items: center
