--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -131,6 +131,18 @@
 
 
 @include media-breakpoint-down(lg)
+  .wpml-ls-menu-item
+    display: none
+  .wpml-ls-legacy-list-horizontal
+    position: absolute
+    top: 365px
+    left: 50%
+    transform: translateX(-50%)
+    li
+      a
+        font-size: 28px
+        color: $main-color
+
   .animated-icon2
     width: 30px
     height: 20px
@@ -198,7 +210,7 @@
       background-color: transparent
       transition: all 300ms ease-in-out
       .navbar-collapse
-          padding: 60px 0
+          padding: 30px 0
       &.nav-open
         background-color: $dark-color
         .navbar-toggler-icon
