--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -139,6 +139,8 @@
     left: 50%
     transform: translateX(-50%)
     li
+      &:nth-child(1)
+          border-right: 1px solid
       a
         color: $main-color
         padding: 0 10px
@@ -146,8 +148,6 @@
           font-size: 28px
           color: $main-color
           font-weight: 300
-        &:nth-child(1)
-          border: 1px solid
 
   .animated-icon2
     width: 30px
