--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -97,6 +97,8 @@
 
 @include media-breakpoint-down(lg)
   .section-hero
+    &__row
+      padding: 250px 0 100px
     .section__btn
       display: inline-block
       margin-top: 40px
