--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -139,8 +139,8 @@
     left: 50%
     transform: translateX(-50%)
     li
-      &:nth-child(1)
-        border-right: 1px solid
+      &:first-child
+        border-right: 1px solid $main-color
       a
         color: $main-color
         padding: 0 10px
@@ -299,5 +299,7 @@
     .navbar
       background-color: $bg-color
       box-shadow: 0px -1px 4px 0px rgb(0 0 0 / 20%)
+      padding-top: 25px
+      padding-bottom: 25px
       &.nav-open
         background-color: $dark-color
