--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -105,6 +105,10 @@
       position: relative
       svg
         fill: $dark-color
+  .section-form
+    padding-bottom: 50px
+    .bg-logo
+      display: none !important
 
 @include media-breakpoint-down(sm)
   .section-hero
