--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -84,6 +84,9 @@
           padding: 1.1rem 3rem 0.9rem !important
           margin-left: 3rem
           box-shadow: 0 1rem 3rem rgb(0 0 0 / 18%) !important
+  
+  .wpml-ls-legacy-list-horizontal
+    display: none
 
   #main-header.sticky
     .navbar
