--- a/assets/sass/_layout/_posts/_single-services.sass
+++ b/assets/sass/_layout/_posts/_single-services.sass
@@ -162,7 +162,7 @@
       &--dark
         .section__subtitle
           font-size: 37.78px
-          line-height: 44px
+          line-height: 44px !important
 
   .services-template-service-newsletter
     .services
