--- a/assets/sass/_layout/_archives/_archive-services.sass
+++ b/assets/sass/_layout/_archives/_archive-services.sass
@@ -11,7 +11,7 @@
     .section__subtitle
       font-size: 47.78px
       letter-spacing: 0.9556px
-      line-height: 54px
+      line-height: 54px !important
       margin-bottom: 70px
     .section__description
       font-size: 14px
@@ -26,4 +26,4 @@
       padding-top: 150px
       .section__subtitle
         font-size: 37.78px
-        line-height: 44px
+        line-height: 44px !important
