--- a/assets/sass/_layout/_posts/_single-services.sass
+++ b/assets/sass/_layout/_posts/_single-services.sass
@@ -163,6 +163,10 @@
         .section__subtitle
           font-size: 37.78px
           line-height: 44px !important
+    
+  .section-websites__row:nth-child(odd) .section-websites__image,
+  .section-websites__row:nth-child(2n) .section-websites__image
+    margin: 0 auto
 
   .services-template-service-newsletter
     .services
