--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -15,7 +15,7 @@
 .page-template-page-home
   .section-intro
     .section__subtitle
-      line-height: 44px
+      line-height: 44px !important
       span
         color: $main-color
 
@@ -56,7 +56,7 @@
   .section__title
     color: $dark-color
   .section__subtitle
-    line-height: 44px
+    line-height: 44px !important
     margin-bottom: 60px
     color: $dark-color
   .bg-logo
