--- a/assets/sass/_layout/_sections.sass
+++ b/assets/sass/_layout/_sections.sass
@@ -20,7 +20,7 @@
     font-family: $second-font
     font-size: 39.82px
     font-weight: 400
-    line-height: 54px
+    line-height: 54px !important
     letter-spacing: 0.3982px
     margin-bottom: 40px
     color: $text-color
