--- a/assets/sass/_components/_blocks.sass
+++ b/assets/sass/_components/_blocks.sass
@@ -30,7 +30,7 @@
       font-weight: 400
       font-size: 33.18px
       letter-spacing: 0.6636px
-      line-height: 44px
+      line-height: 44px !important
       margin-bottom: 40px
       color: $text-color
     &__description
