--- a/assets/sass/_layout/_archives/_archive-blog.sass
+++ b/assets/sass/_layout/_archives/_archive-blog.sass
@@ -8,7 +8,7 @@
     .section__subtitle
       font-size: 47.78px
       letter-spacing: 0.9556px
-      line-height: 54px
+      line-height: 54px !important
       margin-bottom: 70px
   .section-blog
     padding-top: 80px
