--- a/assets/sass/_layout/_archives/_archive-case-studies.sass
+++ b/assets/sass/_layout/_archives/_archive-case-studies.sass
@@ -13,7 +13,7 @@
   .section__subtitle
     font-size: 47.78px
     letter-spacing: 0.9556px
-    line-height: 54px
+    line-height: 54px !important
     margin-bottom: 70px
   .section-case-studies
     padding-top: 80px
