--- a/assets/sass/_layout/_archives/_archive-projects.sass
+++ b/assets/sass/_layout/_archives/_archive-projects.sass
@@ -8,5 +8,5 @@
     .section__subtitle
       font-size: 47.78px
       letter-spacing: 0.9556px
-      line-height: 54px
+      line-height: 54px !important
       margin-bottom: 70px
