--- a/assets/sass/_layout/_pages/_page-about.sass
+++ b/assets/sass/_layout/_pages/_page-about.sass
@@ -54,7 +54,7 @@
             &__subtitle
                 font-size: 47.78px
                 letter-spacing: 0.9556px
-                line-height: 54px
+                line-height: 54px !important
                 margin-bottom: 70px
                 color: $main-color
             &__description
