--- a/assets/sass/_layout/_posts/_single-services.sass
+++ b/assets/sass/_layout/_posts/_single-services.sass
@@ -15,7 +15,7 @@
       .section__subtitle
         font-size: 47.78px
         letter-spacing: 0.9556px
-        line-height: 54px
+        line-height: 54px !important
         margin-bottom: 70px
         color: $bg-color
       .section__description
