--- a/assets/sass/_layout/_archives/_archive-projects.sass
+++ b/assets/sass/_layout/_archives/_archive-projects.sass
@@ -10,3 +10,9 @@
       letter-spacing: 0.9556px
       line-height: 54px !important
       margin-bottom: 70px
+
+@include media-breakpoint-down(lg)
+  .post-type-archive-projects
+    .section__subtitle
+      font-size: 28px
+      line-height: 32px !important
