--- a/assets/sass/_layout/_posts/_single-projects.sass
+++ b/assets/sass/_layout/_posts/_single-projects.sass
@@ -118,4 +118,8 @@
       &:last-of-type
         margin-bottom: 0
         
-      
+@include media-breakpoint-down(lg)
+  .projects-template-default
+    .section__subtitle
+      font-size: 28px
+      line-height: 32px !important
