--- a/assets/sass/_layout/_archives/_archive-blog.sass
+++ b/assets/sass/_layout/_archives/_archive-blog.sass
@@ -12,3 +12,9 @@
       margin-bottom: 70px
   .section-blog
     padding-top: 80px
+
+@include media-breakpoint-down(lg)
+  .blog
+    .section__subtitle
+      font-size: 28px
+      line-height: 32px !important
