--- a/assets/sass/_layout/_archives/_archive-projects.sass
+++ b/assets/sass/_layout/_archives/_archive-projects.sass
@@ -13,6 +13,7 @@
 
 @include media-breakpoint-down(lg)
   .post-type-archive-projects
-    .section__subtitle
-      font-size: 28px
-      line-height: 32px !important
+    .section-intro
+      .section__subtitle
+        font-size: 28px
+        line-height: 32px !important
