--- a/assets/sass/_layout/_archives/_archive-blog.sass
+++ b/assets/sass/_layout/_archives/_archive-blog.sass
@@ -15,6 +15,7 @@
 
 @include media-breakpoint-down(lg)
   .blog
-    .section__subtitle
-      font-size: 28px
-      line-height: 32px !important
+    .section-intro
+      .section__subtitle
+        font-size: 28px
+        line-height: 32px !important
