--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -134,6 +134,8 @@
 
 
 @include media-breakpoint-down(lg)
+  .dropdown-menu
+    top: 20px
   .wpml-ls-menu-item
     display: none
   .wpml-ls-legacy-list-horizontal
