--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -90,6 +90,13 @@
     display: none
 
   #main-header.sticky
+    .dropdown-menu
+      li
+        a
+          color: $bg-color
+          &:hover
+            background-color: transparent
+            color: $main-color
     .navbar
       padding-top: 20px
       padding-bottom: 20px
