--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -93,7 +93,7 @@
     .dropdown-menu
       li
         a
-          color: $bg-color
+          color: $text-color
           &:hover
             background-color: transparent
             color: $main-color
