--- a/assets/sass/_components/_filter.sass
+++ b/assets/sass/_components/_filter.sass
@@ -49,11 +49,5 @@
   .section-filter
     .filter-button-group
       .button
-        width: 48%
+        width: auto
         margin: 1%
-
-@include media-breakpoint-down(md)
-  .section-filter
-    .filter-button-group
-      .button
-        width: 100%
