--- a/assets/sass/_layout/_archives/_archive-projects.sass
+++ b/assets/sass/_layout/_archives/_archive-projects.sass
@@ -15,5 +15,8 @@
   .post-type-archive-projects
     .section-intro
       .section__subtitle
+        padding-top: 160px
         font-size: 28px
         line-height: 32px !important
+        letter-spacing: 0.23px
+        margin-bottom: 40px
