--- a/assets/sass/_layout/_pages/_page-about.sass
+++ b/assets/sass/_layout/_pages/_page-about.sass
@@ -23,18 +23,21 @@
             font-size: 24px
             font-weight: 100
             margin-bottom: 10px
-        &_position
+        &__position
             font-family: $main-font
             font-size: 12px
             font-weight: 400
+            letter-spacing: 0.36px
+            line-height: 25px
 
 .about
     &__header
         &-image
             position: absolute
             width: auto
-            min-width: 100vw
-            height: 100vh
+            max-width: 100%
+            object-fit: cover
+            height: 100%
     &__image-container
         position: relative
         width: 100%
@@ -49,7 +52,8 @@
             width: 100%
     &__container
         position: relative
-        padding: 200px 0 150px
+        padding-top: 200px
+        padding-bottom: 150px
         .section
             &__subtitle
                 font-size: 47.78px
@@ -62,6 +66,10 @@
                 line-height: 30px
                 color: $bg-color
 
+.page-template-page-about
+    .section-intro .section__title #breadcrumbs span .breadcrumb_last
+        color: #fff
+
 @include media-breakpoint-up(lg)
     .section-st-kontakt
         .section
@@ -70,9 +78,29 @@
                 min-height: 60px
 
 @include media-breakpoint-down(lg)
-    .about__container
-        padding-right: calc(var(--bs-gutter-x) * 0.5)
-        padding-left: calc(var(--bs-gutter-x) * 0.5)
-        .section__subtitle
-            font-size: 28px
-            line-height: 32px!important
+    .about
+        &__container
+            padding-top: 160px
+            padding-right: calc(var(--bs-gutter-x) * 0.5)
+            padding-left: calc(var(--bs-gutter-x) * 0.5)
+            .section
+                &__subtitle
+                    font-size: 28px
+                    line-height: 32px !important
+                    letter-spacing: 0.23px
+                    margin-bottom: 40px
+                    color: $main-color
+                &__description
+                    font-size: 16px
+                    line-height: 30px
+                    font-weight: light
+            .section__title--line
+                display: none
+
+    .section-about-team
+        .team
+            &__name
+                font-size: 16px
+                margin-bottom: 5px
+            &__position
+                font-size: 12px
