--- a/assets/sass/_layout/_pages/_page-starting-project.sass
+++ b/assets/sass/_layout/_pages/_page-starting-project.sass
@@ -1,163 +1,220 @@
 .section-st-project.section-form
-    display: flex
-    justify-content: center
-    align-items: center
-    padding: 200px 0 150px
-    background: $main-color
+  display: flex
+  justify-content: center
+  align-items: center
+  padding: 200px 0 150px
+  background: $main-color
+  color: $dark-color
+  .wpcf7
+    .wpcf7-form
+      label
+        span:nth-child(1)
+          display: block
+          margin-bottom: 10px
+        span:nth-child(2)
+          margin-bottom: 30px
+  .section__subtitle
+    text-align: center
     color: $dark-color
-    .wpcf7
-        .wpcf7-form
-            label
-                span:nth-child(1)
-                    display: block
-                    margin-bottom: 10px
-                span:nth-child(2)
-                    margin-bottom: 30px
-    .section__subtitle
-        text-align: center
-        color: $dark-color
-        margin-bottom: 0
-    .st
-        &__col
-            margin-bottom: 65px
-        &__title
-            font-size: 20px
-            font-weight: 400
-            text-align: center
-            text-transform: uppercase
-            line-height: 24px
+    margin-bottom: 0
+  .st
+    &__col
+      margin-bottom: 65px
+    &__title
+      font-size: 20px
+      font-weight: 400
+      text-align: center
+      text-transform: uppercase
+      line-height: 24px
+      color: $dark-color
+      margin-bottom: 55px
+    &__custom
+      &-radio
+        [type="radio"]
+          position: absolute
+          left: -9999px
+        [type="radio"] + .wpcf7-list-item-label::before,
+        [type="radio"] + .wpcf7-list-item-label::after
+          content: ""
+          position: absolute
+          box-sizing: border-box
+          border-radius: 50%
+        [type="radio"] + .wpcf7-list-item-label::before
+          top: 0
+          left: 0
+          width: 20px
+          height: 20px
+          border: 1px solid $dark-color
+        [type="radio"] + .wpcf7-list-item-label::after
+          top: 0
+          left: 0
+          width: 20px
+          height: 20px
+          background: $dark-color
+          transition: all 0.2s
+        [type="radio"]:not(:checked) + .wpcf7-list-item-label::after
+          opacity: 0
+          transform: scale(0.01)
+        [type="radio"]:checked + .wpcf7-list-item-label::after
+          opacity: 1
+          transform: scale(1)
+        [type="radio"]:focus + .wpcf7-list-item-label::before
+          box-shadow: 0 0 0 0 $dark-color
+    &__control
+      &-wrap
+        width: 60%
+        margin: 0 auto 20px
+        .wpcf7-form-control
+          border: 1px solid $dark-color !important
+          border-radius: 25px
+          background-color: $main-color
+          font-family: $main-font
+          font-size: 14px
+          line-height: 16px
+          text-transform: uppercase
+          color: $dark-color
+          outline: 0
+          &::placeholder
             color: $dark-color
-            margin-bottom: 55px
-        &__custom
-            &-radio
-                [type="radio"]
-                    position: absolute
-                    left: -9999px
-                [type="radio"] + .wpcf7-list-item-label::before,
-                [type="radio"] + .wpcf7-list-item-label::after
-                    content: ""
-                    position: absolute
-                    box-sizing: border-box
-                    border-radius: 50%
-                [type="radio"] + .wpcf7-list-item-label::before
-                    top: 0
-                    left: 0
-                    width: 20px
-                    height: 20px
-                    border: 1px solid $dark-color
-                [type="radio"] + .wpcf7-list-item-label::after
-                    top: 0
-                    left: 0
-                    width: 20px
-                    height: 20px
-                    background: $dark-color
-                    transition: all 0.2s
-                [type="radio"]:not(:checked) + .wpcf7-list-item-label::after
-                    opacity: 0
-                    transform: scale(0.01)
-                [type="radio"]:checked + .wpcf7-list-item-label::after
-                    opacity: 1
-                    transform: scale(1)
-                [type="radio"]:focus + .wpcf7-list-item-label::before
-                    box-shadow: 0 0 0 0 $dark-color
-        &__control
-            &-wrap
-                width: 60%
-                margin: 0 auto 20px
-                .wpcf7-form-control
-                    border: 1px solid $dark-color !important
-                    border-radius: 25px
-                    background-color: $main-color
-                    font-family: $main-font
-                    font-size: 14px
-                    line-height: 16px
-                    text-transform: uppercase
-                    color: $dark-color
-                    outline: 0
-                    &::placeholder
-                        color: $dark-color
-                        opacity: 1
+            opacity: 1
 
-    .form
-        &__list
-            &-services
-                display: flex
-                flex-wrap: wrap
-                .wpcf7-list-item
-                    flex: 0 0 48%
-                    padding: 30px 0 0 12%
-                    &-label
-                        position: relative
-                        font-family: $main-font
-                        font-weight: 400
-                        font-size: 16px
-                        line-height: 20px
-                        color: $dark-color
-                        text-transform: none
-                        padding-left: 35px
-            &-projects
-                display: flex
-                flex-direction: column
-                .wpcf7-list-item
-                    padding: 15px 0
-                    margin-left: 62%
-                    transform: translateX(-62%)
-                    &-label
-                        position: relative
-                        font-family: $main-font
-                        font-weight: 400
-                        font-size: 16px
-                        line-height: 20px
-                        color: $dark-color
-                        text-transform: none
-                        padding-left: 35px
-    .cf7mls
-        &_next
-            padding: 10px 52px
+  .form
+    &__list
+      &-services
+        display: flex
+        flex-wrap: wrap
+        .wpcf7-list-item
+          flex: 0 0 48%
+          padding: 30px 0 0 12%
+          &-label
+            position: relative
             font-family: $main-font
-            font-size: 14px
-            text-transform: uppercase
             font-weight: 400
-            border: 1px solid $dark-color
-            border-radius: 20px
-        &_back
-            padding: 10px 52px
+            font-size: 16px
+            line-height: 20px
+            color: $dark-color
+            text-transform: none
+            padding-left: 35px
+        .wpcf7-list-item.last
+          padding-bottom: 0
+      &-projects
+        display: flex
+        flex-direction: column
+        .wpcf7-list-item
+          padding: 15px 0
+          margin-left: 62%
+          transform: translateX(-62%)
+          &-label
+            position: relative
             font-family: $main-font
-            font-size: 14px
-            text-transform: uppercase
             font-weight: 400
-            border: 1px solid $dark-color
-            border-radius: 20px
-        &-btns
-            display: flex
-            justify-content: center
-            gap: 25px
+            font-size: 16px
+            line-height: 20px
+            color: $dark-color
+            text-transform: none
+            padding-left: 35px
+  .cf7mls
+    &_next
+      padding: 10px 60px
+      font-family: $main-font
+      font-size: 14px
+      text-transform: uppercase
+      font-weight: 400
+      border: 1px solid $dark-color
+      border-radius: 20px
+      color: $main-color
+      background-color: $dark-color
+    &_back
+      padding: 10px 60px
+      font-family: $main-font
+      font-size: 14px
+      text-transform: uppercase
+      font-weight: 400
+      border: 1px solid $dark-color
+      border-radius: 20px
+      background-color: $main-color
+    &-btns
+      display: flex
+      justify-content: center
+      gap: 25px
 
 .cf7submit-btn
-    padding: 10px 40px !important
-    font-family: $main-font !important
-    font-size: 14px !important
-    text-transform: uppercase !important
-    font-weight: 400 !important
-    border: 1px solid $dark-color !important
-    border-radius: 20px !important
-    margin: 16px 0px 26px !important
-    background-color: $dark-color !important
-    color: $main-color !important
-    float: none !important
+  padding: 10px 40px !important
+  font-family: $main-font !important
+  font-size: 14px !important
+  text-transform: uppercase !important
+  font-weight: 400 !important
+  border: 1px solid $dark-color !important
+  border-radius: 20px !important
+  margin: 16px 0px 26px !important
+  background-color: $dark-color !important
+  color: $main-color !important
+  float: none !important
 
 fieldset[data-cf7mls-order="2"]
-    text-align: center
-    .cf7mls_back.action-button
-        float: none
+  text-align: center
+  .cf7mls_back.action-button
+    float: none
 
 .section-st-kontakt
-    .section
-        &__description
-            margin-top: 20px
+  .section
+    &__description
+      margin-top: 20px
 
 @include media-breakpoint-up(lg)
-    .section-st-kontakt
-        .section
-            &__description
-                max-width: 75%
+  .section-st-kontakt
+    .section
+      &__description
+        max-width: 75%
+
+@include media-breakpoint-down(lg)
+  .section-st-project
+    .container-starting-project
+      h1.section__subtitle,
+      p.section__subtitle
+        font-size: 23px
+        line-height: 28px
+
+  .section-st-project.section-form
+    padding-top: 140px
+    .st
+      &__col
+        margin-bottom: 40px
+      &__title
+        font-size: 12px
+        margin-bottom: 20px
+      &__control
+        &-wrap
+          width: 100%
+    .form
+      &__list
+        &-services
+          flex-direction: column
+          .wpcf7-list-item
+            flex: 0 1 auto
+            width: 100%
+            padding: 0 0 20px 0
+            margin: 0
+            &-label
+              font-size: 14px
+        &-projects
+          display: flex
+          flex-direction: column
+          .wpcf7-list-item
+            width: 100%
+            padding: 0 0 20px 0
+            &-label
+              font-size: 14px
+    .cf7mls
+      &_next
+        width: 100%
+      &_back
+        width: 100%
+      &-btns
+        justify-content: space-between
+
+
+  fieldset[data-cf7mls-order="2"]
+    .cf7mls_back.action-button
+      float: right
+      margin-right: 0px
