--- a/assets/sass/_layout/_posts/_posts.sass
+++ b/assets/sass/_layout/_posts/_posts.sass
@@ -108,6 +108,9 @@
       text-decoration: none
       transition: all .3s ease-in
       color: $text-color
+      white-space: nowrap
+      overflow: hidden
+      text-overflow: ellipsis
       svg
         transition: all .3s ease-in
         fill: $main-color
