--- a/assets/sass/_layout/_sections.sass
+++ b/assets/sass/_layout/_sections.sass
@@ -69,12 +69,14 @@
     &__title--wrapper
       .text-end
         width: 100%
+    &__subtitle
+        font-size: 24px
+        line-height: 28px !important
+        letter-spacing: 0.23px
     &__description
       &-contact
         padding-right: 0
     &__btn
       &-blocks
         margin-top: 0
-    &__subtitle
-      font-size: 24px
-      line-height: 28px !important
+
