--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -250,3 +250,8 @@
       &:hover
         .card-related-post__title
           color: $main-color
+
+@include media-breakpoint-down(lg)
+  .card-project
+    &__content
+      margin-left: 0px
