--- a/assets/sass/_base-styles.sass
+++ b/assets/sass/_base-styles.sass
@@ -7,6 +7,8 @@ body
   -moz-osx-font-smoothing: grayscale
   background-color: $bg-color
 
+//Bootstrap gutters  
+
 .grecaptcha-badge
   visibility: hidden
 
