--- a/assets/sass/_layout/_pages/_page-starting-project.sass
+++ b/assets/sass/_layout/_pages/_page-starting-project.sass
@@ -30,35 +30,42 @@
       margin-bottom: 55px
     &__custom
       &-radio
-        [type="radio"]
+        [type="radio"], [type="checkbox"]
           position: absolute
           left: -9999px
         [type="radio"] + .wpcf7-list-item-label::before,
-        [type="radio"] + .wpcf7-list-item-label::after
+        [type="radio"] + .wpcf7-list-item-label::after,
+        [type="checkbox"] + .wpcf7-list-item-label::before,
+        [type="checkbox"] + .wpcf7-list-item-label::after
           content: ""
           position: absolute
           box-sizing: border-box
           border-radius: 50%
-        [type="radio"] + .wpcf7-list-item-label::before
+        [type="radio"] + .wpcf7-list-item-label::before,
+        [type="checkbox"] + .wpcf7-list-item-label::before
           top: 0
           left: 0
           width: 20px
           height: 20px
           border: 1px solid $dark-color
-        [type="radio"] + .wpcf7-list-item-label::after
+        [type="radio"] + .wpcf7-list-item-label::after,
+        [type="checkbox"] + .wpcf7-list-item-label::after
           top: 0
           left: 0
           width: 20px
           height: 20px
           background: $dark-color
           transition: all 0.2s
-        [type="radio"]:not(:checked) + .wpcf7-list-item-label::after
+        [type="radio"]:not(:checked) + .wpcf7-list-item-label::after,
+        [type="checkbox"]:not(:checked) + .wpcf7-list-item-label::after
           opacity: 0
           transform: scale(0.01)
-        [type="radio"]:checked + .wpcf7-list-item-label::after
+        [type="radio"]:checked + .wpcf7-list-item-label::after,
+        [type="checkbox"]:checked + .wpcf7-list-item-label::after
           opacity: 1
           transform: scale(1)
-        [type="radio"]:focus + .wpcf7-list-item-label::before
+        [type="radio"]:focus + .wpcf7-list-item-label::before,
+        [type="checkbox"]:focus + .wpcf7-list-item-label::before
           box-shadow: 0 0 0 0 $dark-color
     &__control
       &-wrap
