--- a/assets/sass/_layout/_archives/_archive-blog.sass
+++ b/assets/sass/_layout/_archives/_archive-blog.sass
@@ -10,6 +10,8 @@
       letter-spacing: 0.9556px
       line-height: 54px !important
       margin-bottom: 70px
+      p
+        font-family: $second-font
   .section-blog
     padding-top: 80px
 
