--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -91,11 +91,11 @@
 
   .navbar-nav
     li
-      &::nth-last-child2()       
+      &::nth-last-child(2)       
         border-right: 1px solid
         a
           padding: 0 1rem 0 1.6rem
-      &::nth-last-child()      
+      &::nth-last-child()
         a
           padding: 0 1.6rem 0 1rem
 
