--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -94,7 +94,11 @@
       &:last-child
         border-left: 1px solid
         a
-          padding: 0 1.6rem 0 1rem
+          padding: 0 1.6rem 0 1rem !important
+      &:nth-last-child(2)
+        a
+          padding: 0 1rem 0 1.6rem !important
+        
 
   #main-header.sticky
     .dropdown-menu
