--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -223,6 +223,9 @@
       box-shadow: 0px 3px 20px rgb(0 0 0 / 5%)
       img
         width: 100%
+        max-width: 100%
+        height: 100%
+        object-fit: cover
     &__title
       font-family: $second-font
       font-size: 19px
