--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -234,6 +234,9 @@
       margin-bottom: 10px
       transition: all .3s ease-in
       color: $text-color
+      text-overflow: ellipsis
+      overflow: hidden
+      white-space: nowrap
     &__categ
       font-family: $main-font
       font-size: 12px
