--- a/assets/sass/_components/_newsletter.sass
+++ b/assets/sass/_components/_newsletter.sass
@@ -36,4 +36,8 @@
 @include media-breakpoint-down(lg)
   .mc4wp-form
     width: 100%
-        
+    .mc4wp-form-fields
+      input[type="submit"]
+        width: 100%
+        display: block
+        align-self: center
