--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -1,6 +1,9 @@
 .home
   .navbar-nav
     &__dark
+      li
+        &:last-child
+          border-color: $main-color
       .menu-item
         .nav-link
           color: $main-color
@@ -26,6 +29,9 @@
               fill: $main-color !important
   
 .navbar-nav
+  li
+    &:last-child
+      border-color: #dee3e4
   .menu-item
     .nav-link
       font-family: $main-font
@@ -41,6 +47,9 @@
       color: #DEE3E4
 
   &__light
+    li
+      &:last-child
+        border-color: $text-color
     .menu-item
       .nav-link
         color: #445659
@@ -50,6 +59,9 @@
       .nav-link
         color: $main-color
   &__dark
+    li
+      &:last-child
+        border-color: #dee3e4
     .menu-item
       .nav-link
         color: #DEE3E4
