--- a/assets/sass/_layout/_posts/_posts.sass
+++ b/assets/sass/_layout/_posts/_posts.sass
@@ -107,11 +107,15 @@
       svg
         display: block
         transition: all .3s ease-in
+        margin-top: 5px
         fill: $main-color
       &:hover
         color: $accent-color
         svg
           fill: $accent-color
+  .next-post
+    a
+      justify-content: flex-end
   .previous-post
     svg
       margin-right: 10px
