--- a/assets/sass/_layout/_modules/_projects.sass
+++ b/assets/sass/_layout/_modules/_projects.sass
@@ -21,3 +21,10 @@
     .grid-item
       &:nth-child(3)
         margin-top: 0
+
+@include media-breakpoint-down(md)
+  .card-project
+    &__title
+      h3
+        font-size: 16px !important
+        line-height: 25px
