--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -110,7 +110,7 @@
     .bg-logo
       display: none !important
 
-@include media-breakpoint-down(sm)
+@include media-breakpoint-down(md)
   .section-hero
     &__title
       font-size: 34px
@@ -118,3 +118,5 @@
       span
         &:nth-child(1)
           margin-right: -10%
+    .col-12.col-lg-5.text-end
+      margin-bottom: 30px
