--- a/assets/sass/_layout/_sections.sass
+++ b/assets/sass/_layout/_sections.sass
@@ -66,6 +66,8 @@
   .section
     padding-top: 50px
     padding-bottom: 30px
+    &__title
+      font-size: 12px
     &__title--wrapper
       .text-end
         width: 100%
