--- a/assets/sass/_layout/_modules/_testimonials.sass
+++ b/assets/sass/_layout/_modules/_testimonials.sass
@@ -50,15 +50,19 @@
 @include media-breakpoint-down(lg)
   .section-testimonials
     padding-top: 20px
+    padding-bottom: 60px
+    .section__title
+      &--wrapper
+        margin-top: 30px
     .testimonials-swiper
       .swiper-arrows
         right: auto
         left: 0
-        bottom: 15px
+        bottom: 35px
     .swiper
       padding-bottom: 50px
   .testimonial-blockquote
     &__content
       p
-        font-size: 24px !important
-        line-height: 32px !important
+        font-size: 16px !important
+        line-height: 25px !important
