--- a/assets/sass/_layout/_modules/_testimonials.sass
+++ b/assets/sass/_layout/_modules/_testimonials.sass
@@ -54,6 +54,7 @@
     .section__title
       &--wrapper
         margin-top: 30px
+        margin-bottom: 40px
     .testimonials-swiper
       .swiper-arrows
         right: auto
