--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -97,6 +97,7 @@
 
 @include media-breakpoint-down(lg)
   .section-hero
+    background: linear-gradient(180deg, rgba(18,35,43,1) 0%, rgba(0,204,204,1) 25%, rgba(248,248,248,1) 50%)
     &__row
       padding: 250px 0 100px
     .section__btn
