--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -110,6 +110,8 @@
     padding-bottom: 50px
     .bg-logo
       display: none !important
+  .section-blog
+    padding-bottom: 40px
 
 @include media-breakpoint-down(md)
   .section-hero
