--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -278,6 +278,11 @@
         top: 11px
         width: 0%
         left: 50%
+  .page-template-page-starting-project
+    .animated-icon2
+      span
+        background: $dark-color
+
 
   #main-header
     .navbar
