--- a/assets/sass/_layout/_main-header.sass
+++ b/assets/sass/_layout/_main-header.sass
@@ -282,6 +282,9 @@
     .animated-icon2
       span
         background: $dark-color
+    .animated-icon2.open
+      span
+        background: $main-color
 
 
   #main-header
