--- a/assets/sass/_layout/_pages/_page-about.sass
+++ b/assets/sass/_layout/_pages/_page-about.sass
@@ -104,3 +104,7 @@
                 margin-bottom: 5px
             &__position
                 font-size: 12px
+
+    .section__description-contact,
+    .section__description-team
+        padding-right: 0
