--- a/assets/sass/_layout/_pages/_page-starting-project.sass
+++ b/assets/sass/_layout/_pages/_page-starting-project.sass
@@ -184,6 +184,7 @@ fieldset[data-cf7mls-order="2"]
 
   .section-st-project.section-form
     padding-top: 140px
+    border-bottom: 1px solid $dark-color
     .st
       &__col
         margin-bottom: 40px
