--- a/assets/sass/_layout/_pages/_page-about.sass
+++ b/assets/sass/_layout/_pages/_page-about.sass
@@ -17,6 +17,15 @@
             color: $accent-color
 
 .section-about-team
+    .team-card
+        figure
+            margin: 0
+            overflow: hidden
+            img
+                width: 100%
+                max-width: 100%
+                height: auto
+                object-fit: cover
     .team
         &__name
             font-family: $second-font
