--- a/assets/sass/_layout/_archives/_archive-blog.sass
+++ b/assets/sass/_layout/_archives/_archive-blog.sass
@@ -18,6 +18,7 @@
 @include media-breakpoint-down(lg)
   .blog
     .section-intro
+      padding-top: 120px
       .section__subtitle
         font-size: 28px
         line-height: 32px !important
