--- a/assets/sass/_layout/_posts/_single-projects.sass
+++ b/assets/sass/_layout/_posts/_single-projects.sass
@@ -124,6 +124,16 @@
 
 @include media-breakpoint-down(lg)
   .projects-template-default
+    .section-intro
+      padding-top: 120px
+      padding-bottom: 60px
     .section__subtitle
       font-size: 28px
       line-height: 32px !important
+    .section-content
+      padding-top: 30px
+      .project-description
+        p
+          font-size: 14px
+      .line
+        margin-bottom: 40px
