--- a/assets/sass/_layout/_posts/_posts.sass
+++ b/assets/sass/_layout/_posts/_posts.sass
@@ -142,3 +142,8 @@
         top: 120px
         bottom: auto
         z-index: 8
+  .section-navigation
+    .previous-post,
+    .next-post
+      a
+        font-size: 16px
