--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -99,7 +99,8 @@
   .section-hero
     background: linear-gradient(180deg, rgba(18,35,43,1) 0%, rgba(0,204,204,1) 25%, rgba(248,248,248,1) 40%)
     &__row
-      padding: 250px 0 150px
+      padding-top: 250px
+      padding-bottom: 200px
     .section__btn
       display: inline-block
       margin-top: 40px
