--- a/assets/sass/_layout/_modules/_start-project.sass
+++ b/assets/sass/_layout/_modules/_start-project.sass
@@ -1,10 +1,12 @@
 .btn-start-project-sticky
   display: none
 
-  position: fixed
-  bottom: 100px
+  position: absolute
+  bottom: 50px
   left: 50%
   transform: translateX(-50%)
+  align-self: flex-start
+  margin: 0 auto
   padding: 1.1rem 3rem 0.9rem
 
   border-radius: 30px
