--- a/assets/sass/_layout/_archives/_archive-blog.sass
+++ b/assets/sass/_layout/_archives/_archive-blog.sass
@@ -22,3 +22,6 @@
       .section__subtitle
         font-size: 28px
         line-height: 32px !important
+        margin-bottom: 40px
+    .section-blog
+      padding-top: 50px
