--- a/assets/sass/_layout/_pages/_page-about.sass
+++ b/assets/sass/_layout/_pages/_page-about.sass
@@ -87,6 +87,10 @@
                 min-height: 60px
 
 @include media-breakpoint-down(lg)
+    .page-template-page-about
+        .section__title--wrapper
+            margin-bottom: 40px
+
     .about
         &__container
             padding-top: 120px
