--- a/assets/sass/_layout/_pages/_page-home.sass
+++ b/assets/sass/_layout/_pages/_page-home.sass
@@ -109,6 +109,8 @@
         fill: $dark-color
   .section-form
     padding-bottom: 50px
+    .section__subtitle
+      line-height: 28px
     .bg-logo
       display: none !important
   .section-blog
