--- a/assets/sass/_base-styles.sass
+++ b/assets/sass/_base-styles.sass
@@ -7,7 +7,13 @@ body
   -moz-osx-font-smoothing: grayscale
   background-color: $bg-color
 
-//Bootstrap gutters  
+
+//Bootstrap gutters mobile
+@include media-breakpoint-down(sm)
+  .row > *
+    padding-right: calc(var(--bs-gutter-x) * 1)
+    padding-left: calc(var(--bs-gutter-x) * 1)
+
 
 .grecaptcha-badge
   visibility: hidden
