--- a/assets/sass/_components/_cards.sass
+++ b/assets/sass/_components/_cards.sass
@@ -261,3 +261,10 @@
   .card-project
     &__content
       margin-left: 0px
+
+  .card-post
+    &__title
+      h3
+        font-size: 20px
+    &__btn
+      font-size: 18px
