--- a/assets/sass/_components/_forms.sass
+++ b/assets/sass/_components/_forms.sass
@@ -60,3 +60,6 @@
         label
           visibility: hidden
           max-height: 0
+    form > .row > .col-12
+      padding-right: calc(var(--bs-gutter-x) * 0.5)
+      padding-left: calc(var(--bs-gutter-x) * 0.5)
